:bug: prevent nav wrapping

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -45,9 +45,9 @@
 .Navbar .link {
   display: inline;
   margin-left: 15px;
-  display: inline-flex;
   flex-direction: row;
   align-items: center;
+  white-space: nowrap;
 }
 
 
